// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsDetailHeader should match a snapshot for desktop 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css.
  margin-bottom: 0.75rem;
"
      >
        <mock-styled.div>
          <mock-styled.img
            alt="will-test-dev-co-voracious-person"
            classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
            src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
          />
        </mock-styled.div>
        <mock-styled.div
          classname="mock-css.
  flex-direction: column;
 mock-css.
  justify-content: space-between;
"
        >
          <mock-styled.div
            classname="mock-css.
  flex-direction: column;
"
          >
            <mock-styled.h1
              classname="mock-css."
            >
              will-test-dev-co-voracious-person
            </mock-styled.h1>
            <mock-styled.p
              classname="mock-css."
            >
              Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
            </mock-styled.p>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.span
              classname="mock-css.
  margin-right: 0.75rem;
 mock-css."
            >
              <svg />
            </mock-styled.span>
            <mock-styled.p
              classname="mock-css.
  margin-right: 0.75rem;
 mock-css."
            >
              Verified by Reapit
            </mock-styled.p>
            <mock-styled.div
              classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
            >
              Category
            </mock-styled.div>
            <mock-styled.p
              classname="mock-css.
  margin-right: 0.75rem;
 mock-css. mock-css."
            >
              Integration
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css.
  margin-bottom: 0.75rem;
"
    >
      <mock-styled.div>
        <mock-styled.img
          alt="will-test-dev-co-voracious-person"
          classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
          src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
        />
      </mock-styled.div>
      <mock-styled.div
        classname="mock-css.
  flex-direction: column;
 mock-css.
  justify-content: space-between;
"
      >
        <mock-styled.div
          classname="mock-css.
  flex-direction: column;
"
        >
          <mock-styled.h1
            classname="mock-css."
          >
            will-test-dev-co-voracious-person
          </mock-styled.h1>
          <mock-styled.p
            classname="mock-css."
          >
            Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.span
            classname="mock-css.
  margin-right: 0.75rem;
 mock-css."
          >
            <svg />
          </mock-styled.span>
          <mock-styled.p
            classname="mock-css.
  margin-right: 0.75rem;
 mock-css."
          >
            Verified by Reapit
          </mock-styled.p>
          <mock-styled.div
            classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
          >
            Category
          </mock-styled.div>
          <mock-styled.p
            classname="mock-css.
  margin-right: 0.75rem;
 mock-css. mock-css."
          >
            Integration
          </mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsDetailHeader should match a snapshot for mobile 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css.
  margin-bottom: 0.75rem;
"
      >
        <mock-styled.div
          classname="mock-css.
  flex-direction: column;
 mock-css.
  justify-content: space-between;
"
        >
          <mock-styled.div
            classname="mock-css.
  justify-content: space-between;
 mock-css.
  align-items: flex-end;
 mock-css.
  margin-bottom: 0.5rem;
"
          >
            <mock-styled.h2
              classname="mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
 mock-css. mock-css."
            >
              will-test-dev-co-voracious-person
            </mock-styled.h2>
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="mock-css.
  margin-right: 0.375rem;
 mock-css."
              >
                <svg />
              </mock-styled.span>
              <mock-styled.p
                classname="mock-css.
  margin-right: 0.375rem;
 mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
 mock-css."
              >
                Verified by Reapit
              </mock-styled.p>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.img
                alt="will-test-dev-co-voracious-person"
                classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
                src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
              />
            </mock-styled.div>
            <mock-styled.p
              classname="mock-css."
            >
              Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
            </mock-styled.p>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
            >
              Category
            </mock-styled.div>
            <mock-styled.p
              classname="mock-css.
  margin-right: 0.75rem;
 mock-css. mock-css."
            >
              Integration
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css.
  margin-bottom: 0.75rem;
"
    >
      <mock-styled.div
        classname="mock-css.
  flex-direction: column;
 mock-css.
  justify-content: space-between;
"
      >
        <mock-styled.div
          classname="mock-css.
  justify-content: space-between;
 mock-css.
  align-items: flex-end;
 mock-css.
  margin-bottom: 0.5rem;
"
        >
          <mock-styled.h2
            classname="mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
 mock-css. mock-css."
          >
            will-test-dev-co-voracious-person
          </mock-styled.h2>
          <mock-styled.div
            classname=""
          >
            <mock-styled.span
              classname="mock-css.
  margin-right: 0.375rem;
 mock-css."
            >
              <svg />
            </mock-styled.span>
            <mock-styled.p
              classname="mock-css.
  margin-right: 0.375rem;
 mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
 mock-css."
            >
              Verified by Reapit
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.img
              alt="will-test-dev-co-voracious-person"
              classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
              src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
            />
          </mock-styled.div>
          <mock-styled.p
            classname="mock-css."
          >
            Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div
            classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
          >
            Category
          </mock-styled.div>
          <mock-styled.p
            classname="mock-css.
  margin-right: 0.75rem;
 mock-css. mock-css."
          >
            Integration
          </mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
